--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -89,13 +89,13 @@
                     <a [routerLink]="['topics/changedetection']" data-filter-item data-filter-name="angular change detection strategey">Angular-ChangeDetection-Strategey</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="angular encapsulations">Angular-Encapsulations</a>
+                    <a lass="unfinished"[routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="angular encapsulations">Angular-Encapsulations</a>
                   </li>
                   <li>
                     <a [routerLink]="['topics/resolver']" data-filter-item data-filter-name="resolver angular">Resolver-Angular</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="component factory angular">Component-Factory-Angular</a>
+                    <a class="unfinished" [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="component factory angular">Component-Factory-Angular</a>
                   </li>
                   <li>
                     <a [routerLink]="['topics/dynamic']" data-filter-item data-filter-name="dynamic component angular">DynamicComponent-Angular</a>
@@ -110,8 +110,83 @@
                     <a [routerLink]="['topics/interceptinput']" data-filter-item data-filter-name="interceptinput">How to Intercept Input</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
+                    <a class="unfinished" [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
                   </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/shadowdom']" data-filter-item data-filter-name="shadowdom in angular">shadow dom</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/angularpipes']" data-filter-item data-filter-name="Common Pipes in angular">Common Pipes in angular</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/ayncwait']" data-filter-item data-filter-name="Async/await">Async/await</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/closure']" data-filter-item data-filter-name="Async/await">Closure</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/currying']" data-filter-item data-filter-name="Currying">Currying</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/decorators']" data-filter-item data-filter-name="decorators">decorators</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/deepclone']" data-filter-item data-filter-name="immuatble">Immutable angular</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/dependecyinjection']" data-filter-item data-filter-name="dependecyinjection">dependecyinjection</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/problems']" data-filter-item data-filter-name="problems">problems</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/differentwaystopassinput']" data-filter-item data-filter-name="differentwaystopassinput">differentwaystopassinput</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/dynamicformvalidation']" data-filter-item data-filter-name="dynamicformvalidation">dynamicformvalidation</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/emitters']" data-filter-item data-filter-name="emitters">emitters</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/eventcoalesing']" data-filter-item data-filter-name="eventcoalesing">eventcoalesing</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/formarray']" data-filter-item data-filter-name="formarray">formarray</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/generics']" data-filter-item data-filter-name="generics">generics</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/injectors']" data-filter-item data-filter-name="injectors">injectors</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/lifecyclehooks']" data-filter-item data-filter-name="lifecyclehooks">lifecyclehooks</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/mapreducefiler']" data-filter-item data-filter-name="mapreducefiler">mapreducefiler</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/ngrxstore']" data-filter-item data-filter-name="ngrxstore">ngrxstore</a>
+                  </li>
+                  <li>
+                    <a class="unfinished" [routerLink]="['topics/repeat']" data-filter-item data-filter-name="repeat">repeat</a>
+                  </li>
+                  <li>
+                    <a class="unfinished" [routerLink]="['topics/thrrotlejoin']" data-filter-item data-filter-name="thrrotlejoin">thrrotlejoin</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/singletonpattern']" data-filter-item data-filter-name="singletonpattern">singletonpattern</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/some']" data-filter-item data-filter-name="some">some</a>
+                  </li>
+                  <li>
+                    <a class="unfinished"[routerLink]="['topics/subjects']" data-filter-item data-filter-name="subjects">subjects</a>
+                  </li>
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/websockets']" data-filter-item data-filter-name="websockets">websockets</a>
+                  </li>                 
                 </ul>
               </div>
             </li>
