Added topic details

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -89,13 +89,13 @@
                     <a [routerLink]="['topics/changedetection']" data-filter-item data-filter-name="angular change detection strategey">Angular-ChangeDetection-Strategey</a>
                   </li>
                   <li>
-                    <a lass="unfinished"[routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="angular encapsulations">Angular-Encapsulations</a>
+                    <a [routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="angular encapsulations">Angular-Encapsulations</a>
                   </li>
                   <li>
                     <a [routerLink]="['topics/resolver']" data-filter-item data-filter-name="resolver angular">Resolver-Angular</a>
                   </li>
                   <li>
-                    <a class="unfinished" [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="component factory angular">Component-Factory-Angular</a>
+                    <a [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="component factory angular">Component-Factory-Angular</a>
                   </li>
                   <li>
                     <a [routerLink]="['topics/dynamic']" data-filter-item data-filter-name="dynamic component angular">DynamicComponent-Angular</a>
@@ -113,7 +113,7 @@
                     <a class="unfinished" [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/shadowdom']" data-filter-item data-filter-name="shadowdom in angular">shadow dom</a>
+                    <a [routerLink]="['topics/shadowdom']" data-filter-item data-filter-name="shadowdom in angular">shadow dom</a>
                   </li>
                   <li>
                     <a class="unfinished"[routerLink]="['topics/angularpipes']" data-filter-item data-filter-name="Common Pipes in angular">Common Pipes in angular</a>
