--- a/src/app/topics/componentfactory/componentfactory.component.html
+++ b/src/app/topics/componentfactory/componentfactory.component.html
@@ -2,5 +2,26 @@
     <div class="container-fluid default-bar">
       <h2>What is Component Facotry in Angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>
+        Base class for a factory that can create a component dynamically. Instantiate a factory for a given type of component with resolveComponentFactory(). Use the resulting ComponentFactory.create() method to create a component of that type.
+      </p>
+      <p>The ComponentFactoryResolver service exposes one primary method, resolveComponentFactory.</p>
+      <p>The resolveComponentFactory() method takes a component and returns a ComponentFactory.</p>
+      <span>
+        
+      </span>
+  
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-component-factory" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/angular-component-factory-resolve" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/dynamic-component-loader" target="_blank">angular.io</a></li>
+          <li><a href="https://medium.com/@jedirichang/implementing-component-factory-angular-6-c2c1ad7242a8" target="_blank">medium</a></li>
+      </ul>
     </div>
 </main>
+
+
