--- a/src/app/topics/encapsulation/encapsulation.component.html
+++ b/src/app/topics/encapsulation/encapsulation.component.html
@@ -2,5 +2,29 @@
     <div class="container-fluid default-bar">
       <h2>What is Encapsulations in Angular? how many are there? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>View Encapsulation in Angular defines how the styles defined in the template affects the other parts of the application.</p>
+      <p>
+        An encapsulation policy for the template and CSS styles. One of:
+          <br /><br />
+          ViewEncapsulation.Native: Deprecated. Use ViewEncapsulation.ShadowDom instead.<br />
+          ViewEncapsulation.Emulated: Use shimmed CSS that emulates the native behavior.<br />
+          ViewEncapsulation.None: Use global CSS without any encapsulation.<br />
+          ViewEncapsulation.ShadowDom: Use Shadow DOM v1 to encapsulate styles.<br />
+      </p>
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-view-encapsulation" target="_blank">stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/view-encapsulation-example-in-angular" target="_blank">stackblitz</a></div>
+          
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/@jinalshah999/viewencapsulation-in-angular-db171007614d" target="_blank">medium</a></li>
+          <li><a href="https://angular.io/api/core/Component#encapsulation" target="_blank">angular.io</a></li>
+          <li><a href="https://www.tektutorialshub.com/angular/angular-view-encapsulation/" target="_blank">tektutorialshub</a></li>
+          <li><a href="https://netbasal.com/dynamically-creating-components-with-angular-a7346f4a982d" target="_blank">netbasal</a></li>
+          
+      </ul>
+
     </div>
 </main>
