--- a/src/app/topics/shadowdom/shadowdom.component.html
+++ b/src/app/topics/shadowdom/shadowdom.component.html
@@ -2,5 +2,6 @@
     <div class="container-fluid default-bar">
       <h2>What is ShadowDom in Angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>Please refer to the Rosolver factory link to know about shadow dom <a [routerLink]="['/topics/resolver']">here</a></p>
     </div>
 </main>
