added new topic details

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -110,31 +110,31 @@
                     <a [routerLink]="['topics/interceptinput']" data-filter-item data-filter-name="interceptinput">How to Intercept Input</a>
                   </li>
                   <li>
-                    <a class="unfinished" [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
+                    <a [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
                   </li>
                   <li>
                     <a [routerLink]="['topics/shadowdom']" data-filter-item data-filter-name="shadowdom in angular">shadow dom</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/angularpipes']" data-filter-item data-filter-name="Common Pipes in angular">Common Pipes in angular</a>
+                    <a [routerLink]="['topics/angularpipes']" data-filter-item data-filter-name="Common Pipes in angular">Common Pipes in angular</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/ayncwait']" data-filter-item data-filter-name="Async/await">Async/await</a>
+                    <a [routerLink]="['topics/ayncwait']" data-filter-item data-filter-name="Async/await">Async/await</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/closure']" data-filter-item data-filter-name="Async/await">Closure</a>
+                    <a [routerLink]="['topics/closure']" data-filter-item data-filter-name="Async/await">Closure</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/currying']" data-filter-item data-filter-name="Currying">Currying</a>
+                    <a [routerLink]="['topics/currying']" data-filter-item data-filter-name="Currying">Currying</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/decorators']" data-filter-item data-filter-name="decorators">decorators</a>
+                    <a [routerLink]="['topics/decorators']" data-filter-item data-filter-name="decorators">decorators</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/deepclone']" data-filter-item data-filter-name="immuatble">Immutable angular</a>
+                    <a [routerLink]="['topics/deepclone']" data-filter-item data-filter-name="immuatble">Immutable angular</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/dependecyinjection']" data-filter-item data-filter-name="dependecyinjection">dependecyinjection</a>
+                    <a [routerLink]="['topics/dependecyinjection']" data-filter-item data-filter-name="dependecyinjection">dependecyinjection</a>
                   </li>
                   <li>
                     <a class="unfinished"[routerLink]="['topics/problems']" data-filter-item data-filter-name="problems">problems</a>
