--- a/src/app/topics/angularpipes/angularpipes.component.html
+++ b/src/app/topics/angularpipes/angularpipes.component.html
@@ -2,5 +2,26 @@
     <div class="container-fluid default-bar">
       <h2>What is different commonly usedAngular Pipes? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <p>
+        A pipe takes in data as input and transforms it to a desired output.
+      </p>
+      <p>Once data arrives, you could push their raw toString values directly to the view, but that rarely makes for a good user experience. For example, in most use cases, users prefer to see a date in a simple format like April 15, 1988 rather than the raw string format Fri Apr 15 1988 00:00:00 GMT-0700 (Pacific Daylight Time).
+      </p>
+      <p>Clearly, some values benefit from a bit of editing. You may notice that you desire many of the same transformations repeatedly, both within and across many applications. You can almost think of them as styles. In fact, you might like to apply them in your HTML templates as you do styles.
+      </p>
+      <span>
+        
+      </span>
+  
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-pipes" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/angular-pipe" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/pipes" target="_blank">angular.io</a></li>
+          <li><a href="https://codecraft.tv/courses/angular/pipes/built-in-pipes/" target="_blank">codecraft</a></li>
+      </ul>
     </div>
 </main>
