--- a/src/app/topics/asyncawait/asyncawait.component.html
+++ b/src/app/topics/asyncawait/asyncawait.component.html
@@ -2,5 +2,26 @@
     <div class="container-fluid default-bar">
       <h2>What is Async/Await? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        The async and await keywords are simply syntactic sugar over JavaScript Promises and they make it one more step forward toward using fewer callbacks in your code.
+      </p>
+      <p>An async function can contain an await expression that pauses the execution of the async function and waits for the passed Promise's resolution, and then resumes the async function's execution and evaluates as the resolved value.
+      </p>
+      <p>Remember, the await keyword is only valid inside async functions. If you use it outside of an async function's body, you will get a SyntaxError.      </p>
+      <span>
+        
+      </span>
+  
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-async-await" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/angular-async-await-click" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/@benlesh/rxjs-observable-interop-with-promises-and-async-await-bebb05306875" target="_blank">medium</a></li>
+          <li><a href="https://medium.com/javascript-in-plain-english/angular-observables-async-await-and-promises-oh-my-c6220c074878#:~:text=Observables%20in%20sequence%2C%20using%20async%2Fawait&text=Async%20is%20a%20keyword%20that,e.g.%20Promise%20)." target="_blank">medium</a></li>
+      </ul>
     </div>
 </main>
