--- a/src/app/topics/closures/closures.component.html
+++ b/src/app/topics/closures/closures.component.html
@@ -2,5 +2,20 @@
     <div class="container-fluid default-bar">
       <h2>What is Closure? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        A closure is the combination of a function bundled together (enclosed) with references to its surrounding state (the lexical environment). In other words, a closure gives you access to an outer function’s scope from an inner function. In JavaScript, closures are created every time a function is created, at function creation time.
+      </p>
+  
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/javascript-closures?file=index.js" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/closure-javascript" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/javascript-scene/master-the-javascript-interview-what-is-a-closure-b2f0d2152b36" target="_blank">medium</a></li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Closures#:~:text=In%20other%20words%2C%20a%20closure,created%2C%20at%20function%20creation%20time." target="_blank">mozilla</a></li>
+      </ul>
     </div>
 </main>
