--- a/src/app/topics/currying/currying.component.html
+++ b/src/app/topics/currying/currying.component.html
@@ -2,5 +2,27 @@
     <div class="container-fluid default-bar">
       <h2>What is Currying? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        Currying is an advanced technique of working with functions. It’s used not only in JavaScript, but in other languages as well.
+      </p>
+      <p>
+        Currying is a transformation of functions that translates a function from callable as f(a, b, c) into callable as f(a)(b)(c).
+      </p>
+      <p>
+        Currying doesn’t call a function. It just transforms it.
+      </p>
+  
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/currying" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/currying-in-js-intrv-prepare" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://javascript.info/currying-partials" target="_blank">medium</a></li>
+          <li><a href="https://blog.bitsrc.io/understanding-currying-in-javascript-ceb2188c339" target="_blank">mozilla</a></li>
+      </ul>
+
     </div>
 </main>
