--- a/src/app/topics/decorators/decorators.component.html
+++ b/src/app/topics/decorators/decorators.component.html
@@ -2,5 +2,18 @@
     <div class="container-fluid default-bar">
       <h2>What is Commonly used decorators in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        Decorators are a design pattern that is used to separate modification or decoration of a class without modifying the original source code. In AngularJS, decorators are functions that allow a service, directive or filter to be modified prior to its usage.
+      </p>
+  
+      
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://ultimatecourses.com/blog/angular-decorators" target="_blank">ultimatecourses</a></li>
+          <li><a href="https://medium.com/@madhavmahesh/list-of-all-decorators-available-in-angular-71bdf4ad6976" target="_blank">medium</a></li>
+      </ul>
+
     </div>
 </main>
