--- a/src/app/topics/dependecncyinjection/dependecncyinjection.component.html
+++ b/src/app/topics/dependecncyinjection/dependecncyinjection.component.html
@@ -2,5 +2,24 @@
     <div class="container-fluid default-bar">
       <h2>What are different dependecy injection methods in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        Dependency injection (DI), is an important application design pattern. Angular has its own DI framework, which is typically used in the design of Angular applications to increase their efficiency and modularity. ... In Angular, the DI framework provides declared dependencies to a class when that class is instantiated.
+      </p>
+      <p>
+        
+      </p>
+  
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/angular/pmmpqkbmanl" target="_blank">stackblitz</a><br />
+          <a href="https://stackblitz.com/edit/angular5-dependency-injection" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/guide/dependency-injection" target="_blank">angular.io</a></li>
+          <li><a href="https://alligator.io/angular/dependency-injection-angular/" target="_blank">alligator</a></li>
+      </ul>
+
     </div>
 </main>
