--- a/src/app/topics/deepclone/deepclone.component.html
+++ b/src/app/topics/deepclone/deepclone.component.html
@@ -2,5 +2,21 @@
     <div class="container-fluid default-bar">
       <h2>What is immutable in the angular? what is deepclone,_clone,spread operators? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        The text-book definition of mutability is liable or subject to change or alteration. In programming, we use the word to mean objects whose state is allowed to change over time. An immutable value is the exact opposite – after it has been created, it can never change.
+      </p>
+      <p>Strings are not the only immutable values built into JavaScript. Numbers are immutable too. Can you even imagine an environment where evaluating the expression 2 + 3 changes the meaning of the number 2? It sounds absurd, yet we do this with our objects and arrays all the time.
+      </p>
+      <p>Immutable data cannot be changed once created, leading to much simpler application development, no defensive copying, and enabling advanced memoization and change detection techniques with simple logic. Persistent data presents a mutative API which does not update the data in-place, but instead always yields new updated data.
+      </p>
+      
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://benmccormick.org/2016/06/04/what-are-mutable-and-immutable-data-structures-2#:~:text=An%20immutable%20object%20is%20an,classes%2C%20sets%2C%20and%20maps." target="_blank">benmccormick</a></li>
+          <li><a href="https://immutable-js.github.io/immutable-js/" target="_blank">immutable</a></li>
+      </ul>
+
     </div>
 </main>
