--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -140,25 +140,25 @@
                     <a class="unfinished"[routerLink]="['topics/problems']" data-filter-item data-filter-name="problems">problems</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/differentwaystopassinput']" data-filter-item data-filter-name="differentwaystopassinput">differentwaystopassinput</a>
+                    <a [routerLink]="['topics/differentwaystopassinput']" data-filter-item data-filter-name="differentwaystopassinput">differentwaystopassinput</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/dynamicformvalidation']" data-filter-item data-filter-name="dynamicformvalidation">dynamicformvalidation</a>
+                    <a [routerLink]="['topics/dynamicformvalidation']" data-filter-item data-filter-name="dynamicformvalidation">dynamicformvalidation</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/emitters']" data-filter-item data-filter-name="emitters">emitters</a>
+                    <a [routerLink]="['topics/emitters']" data-filter-item data-filter-name="emitters">emitters</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/eventcoalesing']" data-filter-item data-filter-name="eventcoalesing">eventcoalesing</a>
+                    <a [routerLink]="['topics/eventcoalesing']" data-filter-item data-filter-name="eventcoalesing">eventcoalesing</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/formarray']" data-filter-item data-filter-name="formarray">formarray</a>
+                    <a  [routerLink]="['topics/formarray']" data-filter-item data-filter-name="formarray">formarray</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/generics']" data-filter-item data-filter-name="generics">generics</a>
+                    <a class="unfinished" [routerLink]="['topics/generics']" data-filter-item data-filter-name="generics">generics</a>
                   </li>
                   <li>
-                    <a class="unfinished"[routerLink]="['topics/injectors']" data-filter-item data-filter-name="injectors">injectors</a>
+                    <a class="unfinished" [routerLink]="['topics/injectors']" data-filter-item data-filter-name="injectors">injectors</a>
                   </li>
                   <li>
                     <a class="unfinished"[routerLink]="['topics/lifecyclehooks']" data-filter-item data-filter-name="lifecyclehooks">lifecyclehooks</a>
