--- a/src/app/topics/differentwaystopassinput/differentwaystopassinput.component.html
+++ b/src/app/topics/differentwaystopassinput/differentwaystopassinput.component.html
@@ -2,5 +2,31 @@
     <div class="container-fluid default-bar">
       <h2>What are different ways to pass input to components in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        Data sharing is an essential concept to understand before diving into your first Angular project. In Angular mainly we have 4 methods by which a component can share data and information with another component by passing data or events:
+      </p>
+
+      <ul>
+        <li>Parent to Child: via Input</li>
+        <li>Child to Parent: via Output() and EventEmitter</li>
+        <li>Child to Parent: via ViewChild</li>
+        <li>Unrelated Components: via a Service</li>
+      </ul>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://angular-parent-to-child-communication.stackblitz.io" target="_blank">parent-child-stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/parent-child-interaction" target="_blank">parent-child-stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/angular-view-child" target="_blank">viewChild-stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/angular-sibling-components-interaction-3?file=src%2Fapp%2Fshared.service.ts" target="_blank">Unrelated Components-stackblitz</a></div>
+          
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/@nodexperts_88267/data-transfer-one-component-to-another-angular-7-c076272c78e1" target="_blank">medium</a></li>
+          <li><a href="https://fireship.io/lessons/sharing-data-between-angular-components-four-methods/" target="_blank">fireship</a></li>
+      </ul>
+
     </div>
 </main>
