--- a/src/app/topics/dynamicformvalidations/dynamicformvalidations.component.html
+++ b/src/app/topics/dynamicformvalidations/dynamicformvalidations.component.html
@@ -2,5 +2,25 @@
     <div class="container-fluid default-bar">
       <h2>how to do dynamic form validation? what is decorator based validation? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      
+      <p>
+        Please refer stackblitz demo and important topic links:
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/angular-dynamic-validation" target="_blank">stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/angular-dynamic-field-validation" target="_blank">stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/angular-reactive-forms-dynamic-validation" target="_blank">stackblitz</a></div>
+          
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/@oojhaajay/dynamic-validation-in-angular-dynamic-forms-aca8df20ece0" target="_blank">medium</a></li>
+          <li><a href="https://netbasal.com/three-ways-to-dynamically-alter-your-form-validation-in-angular-e5fd15f1e946" target="_blank">fireship</a></li>
+          <li><a href="https://angular.io/guide/dynamic-form" target="_blank">angular.io</a></li>
+      </ul>
+
+
     </div>
 </main>
