--- a/src/app/topics/formarrayangular/formarrayangular.component.html
+++ b/src/app/topics/formarrayangular/formarrayangular.component.html
@@ -2,5 +2,25 @@
     <div class="container-fluid default-bar">
       <h2>What is FormArray in angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>
+        A FormArray aggregates the values of each child FormControl into an array. It calculates its status by reducing the status values of its children. For example, if one of the controls in a FormArray is invalid, the entire array becomes invalid.
+      </p>
+
+      <p>FormArray is one of the three fundamental building blocks used to define forms in Angular, along with FormControl and FormGroup.
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <div class="row"><a href="https://stackblitz.com/edit/angular6-dynamic-form-array" target="_blank">stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/form-array-angular" target="_blank">stackblitz</a></div>
+          
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://angular.io/api/forms/FormArray#description" target="_blank">angular.io</a></li>
+          <li><a href="https://www.tektutorialshub.com/angular/angular-formarray-example-in-reactive-forms/" target="_blank">tektutorialshub</a></li>
+      </ul>
+
     </div>
 </main>
