added new components

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -186,7 +186,13 @@
                   </li>
                   <li>
                     <a  class="unfinished"[routerLink]="['topics/websockets']" data-filter-item data-filter-name="websockets">websockets</a>
-                  </li>                 
+                  </li>   
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/observerpattern']" data-filter-item data-filter-name="observerpattern">observerpattern</a>
+                  </li>    
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/facadepattern']" data-filter-item data-filter-name="facadepattern">facadepattern</a>
+                  </li>                  
                 </ul>
               </div>
             </li>
