--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -192,6 +192,9 @@
                   </li>    
                   <li>
                     <a  class="unfinished"[routerLink]="['topics/facadepattern']" data-filter-item data-filter-name="facadepattern">facadepattern</a>
+                  </li>  
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/routerevents']" data-filter-item data-filter-name="routerevents">routerevents</a>
                   </li>                  
                 </ul>
               </div>
