--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -195,7 +195,10 @@
                   </li>  
                   <li>
                     <a  class="unfinished"[routerLink]="['topics/routerevents']" data-filter-item data-filter-name="routerevents">routerevents</a>
-                  </li>                  
+                  </li>       
+                  <li>
+                    <a  class="unfinished"[routerLink]="['topics/arraymanipulation']" data-filter-item data-filter-name="arraymanipulation">arraymanipulation</a>
+                  </li>               
                 </ul>
               </div>
             </li>
